tests/programs/invalid/omitted_constructor.java
public class omitted_constructor {
    /* public A() {} */
}